--- a/index.html
+++ b/index.html
@@ -174,7 +174,35 @@
 </template>
 
 <script>
-  var fireballSize = 100;
+  // размер фаербола
+  var fireballSize = 22;
+  // скорость мага
+  var wizardSpeed = 3;
+  // ширина мага
+  var wizardWidth = 70;
+
+  // скорость фаербола
+  var getFireballSpeed = function(left) {
+    if (left === true) {
+      return 5;
+    }
+    return 2;
+  };
+
+  // пропорциональная высота мага
+  var getWizardHeight = function() {
+    return 1.337 * wizardWidth;
+  };
+
+  // расчет положения мага по середине горизонтали (ширина игровой области / пополам минус ширина мага)
+  var getWizardX = function(width) {
+    return width / 2 - wizardWidth / 2;
+  };
+
+  // расчет положения мага по вертикали (высота игровой области * две трети игрового поля от земли минус высота мага)
+  var getWizardY = function(height) {
+    return height / 3 - getWizardHeight();
+  };
 </script>
 <script src="./js/game.js"></script>
 
